# demo1

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  package.bat
components/: EAreaChart.qml  EDropdown.qml  EHoverCard.qml  ESlider.qml  ESwitchButton.qml
pages/: HomePage.qml  WaveformPage.qml
serial/: SerialPortManager.cpp
